--- a/notebooks/Ciclo 4.ipynb
+++ b/notebooks/Ciclo 4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "(23151, 14)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "4 -0.266980  -0.648027  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "(26, 39)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "(26, 39)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
        "38    47.500   604.682308   610.99   13.731685 -1.800761   2.141848  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1892,7 @@
        "38  1.269231     2.0  1.226555  0.507032 -0.421253  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
        "<AxesSubplot:xlabel='name', ylabel='demand'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2018,10 +2018,10 @@
        "  <th>Method:</th>                  <td>Least Squares</td>        <th>  F-statistic:       </th> <td>   2.108</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                  <td>Mon, 26 Jun 2023</td>       <th>  Prob (F-statistic):</th>  <td> 0.159</td> \n",
+       "  <th>Date:</th>                  <td>Wed, 28 Jun 2023</td>       <th>  Prob (F-statistic):</th>  <td> 0.159</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                      <td>08:33:39</td>           <th>  Log-Likelihood:    </th> <td> -50.564</td>\n",
+       "  <th>Time:</th>                      <td>09:01:17</td>           <th>  Log-Likelihood:    </th> <td> -50.564</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>           <td>    26</td>            <th>  AIC:               </th> <td>   105.1</td>\n",
@@ -2070,8 +2070,8 @@
        "Dep. Variable:     12 MacBook (Mid 2017, Gold)   R-squared:                       0.081\n",
        "Model:                                     OLS   Adj. R-squared:                  0.042\n",
        "Method:                          Least Squares   F-statistic:                     2.108\n",
-       "Date:                         Mon, 26 Jun 2023   Prob (F-statistic):              0.159\n",
-       "Time:                                 08:33:39   Log-Likelihood:                -50.564\n",
+       "Date:                         Wed, 28 Jun 2023   Prob (F-statistic):              0.159\n",
+       "Time:                                 09:01:17   Log-Likelihood:                -50.564\n",
        "No. Observations:                           26   AIC:                             105.1\n",
        "Df Residuals:                               24   BIC:                             107.6\n",
        "Df Model:                                    1                                         \n",
@@ -2095,7 +2095,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
        "1299.99"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2154,7 @@
        "0.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
        "6      209.66           0.96   6.778268 -0.027743  0.277667  0.005677  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,9 +2403,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FATURAMENTO REDUCAO:{} 11663.91\n",
+      "FATURAMENTO REDUCAO:{} 3776.47\n",
+      "FATURAMENTO REDUCAO:{} 4364.64\n",
+      "FATURAMENTO REDUCAO:{} 19832.36\n",
+      "FATURAMENTO REDUCAO:{} 24197.26\n",
+      "FATURAMENTO REDUCAO:{} 7159.59\n",
+      "FATURAMENTO REDUCAO:{} 4717.35\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2540,7 +2553,7 @@
        "6              -2383.26                -0.45  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2562,14 +2575,20 @@
     "    demanda_atual = y_demand[df_elastity['name'][i]].sum()\n",
     "\n",
     "    reducao_preco = preco_atual_medio*0.9\n",
+    "    #print('ALTERACAO PRECO:{}', reducao_preco)\n",
     "    aumento_demanda = -0.1*df_elastity['price_elastity'][i]\n",
+    "    #print('AUMENTO DEMANDA:{}', aumento_demanda)\n",
     "\n",
     "    demanda_nova = aumento_demanda*demanda_atual\n",
+    "    #print('DEMANDA NOVA:{}', demanda_nova)\n",
     "\n",
     "    faturamento_atual = round(preco_atual_medio*demanda_atual, 2)\n",
+    "    #print('FATURAMENTO ATUAL:{}', faturamento_atual)\n",
     "    faturamento_novo = round(reducao_preco*demanda_nova, 2)\n",
+    "    #print('FATURAMENTO NOVO:{}', faturamento_novo)\n",
     "\n",
     "    faturamento_reducao = round(faturamento_atual*0.9, 2)\n",
+    "    print('FATURAMENTO REDUCAO:{}', faturamento_reducao)\n",
     "\n",
     "    perda_faturamento = round(faturamento_atual-faturamento_reducao, 2)\n",
     "\n",
